--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div>
             <h1
               id="word"
-              class="text-[#2D2D2D] text-[32px] dark:text-white md:text-6xl md:mb-[11px]"
+              class="text-[#2D2D2D] text-[32px] capitalize dark:text-white md:text-6xl md:mb-[11px]"
             >
               Keyboard
             </h1>
